# simplequil

./: .gitignore  .taurignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx  EpubReader.css  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/voices/: es_ES-sharvard-medium.onnx
src/components/AudiobookExport/: AudiobookExportModal.css  AudiobookExportModal.tsx
src/components/BookCard/: BookCard.css  BookCard.tsx
src/components/BookDetails/: BookDetails.css  BookDetails.tsx
src/components/BookGallery/: BookGallery.css  BookGallery.tsx
src/components/BottomBar/: BottomBar.css  BottomBar.tsx
src/components/CbzReader/: CbzReader.css  CbzReader.tsx
src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
src/components/EpubReader/: EpubReader.css  EpubReader.tsx
src/components/PdfReader/: PdfReader.css  PdfReader.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/TopBar/: TopBar.css  TopBar.tsx
