[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
regex = "1"
epub = "2.1.5"
base64 = "0.22.1"
zip = "2.2.0"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
walkdir = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
urlencoding = "2.1.3"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10.8"
hex = "0.4.3"
futures-util = "0.3"
trash = "5.2.5"
image = "0.25.1"
tauri-plugin-single-instance = "2.0.0-rc"

